--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-fullthrot-1",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://Akashp11111997.github.io/ActivityViewer",
   "dependencies": {
     "axios": "^0.19.2",
     "bootstrap": "^4.5.2",
@@ -16,6 +17,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
